objects/Reassignment_Batch__c.object
<CustomObject>
    <label>Reassignment Batch</label>
    <nameField>
        <displayFormat>RB{00000}</displayFormat>
        <label>Reassignment Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reassignment Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Reassignment Batches</relationshipLabel>
        <relationshipName>Reassignment_Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community</label>
        <referenceTo>Community__c</referenceTo>
        <relationshipLabel>Reassignment Batches</relationshipLabel>
        <relationshipName>Reassignment_Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reassign_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reassign To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reassignment_Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Search_Name__c</fullName>
        <label>Search Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reassignment_Batches1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Where_Condition__c</fullName>
        <label>Where Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reassign_Activities_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reassign Activities Only</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>